--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News page</title>
+    <title>Contact page</title>
 </head>
 <body>
-    News page 
+   This contact page
    <h1>My name is pankaj</h1>
-
 </body>
 </html>
